update spl-token InitializeMint Layout

--- a/solana-program-library/spl-token/index.html
+++ b/solana-program-library/spl-token/index.html
@@ -11,7 +11,7 @@
         import init, { parse } from "./pkg/spl_token.js";
         init().then(() => {
             let join_key = "5kkPihtAaNhVHmAShzyRw3vg3dQFAiEA888BmvTHU3v8nRCKQSp4j52EVapC6QRyLivuWmPWvVx9NBBShLdcMqMp_0_1";
-            let data = "3DasjB5JXVBD";
+            let data = "1Cprdg3vFCbH2cGLTHpmvDysAEMtruzLqSm3H7z2j3jLwaP";
             let accs = ["BpHuL7HNTJDDGiw4ELpnYQdhTNNgZ53ennhtkQjGawGS", "9RFqA8EbTTqH3ct1fTGiGgqFAg2hziUdtyGgg1w69LJP", "F2f14Nw7kqBeGwgFymm7sEPcZrKWWN56hvN5yx2vc6sE"];
             console.log(parse(join_key, data, accs));
         });
