--- a/metaplex/token-metadata/index.html
+++ b/metaplex/token-metadata/index.html
@@ -11,7 +11,7 @@
         import init, { parse } from "./pkg/metaplex_token_metadata.js";
         init().then(() => {
             let join_key = "jk";
-            let data = "BfT4t1BYrEyEfdR";
+            let data = "FoBM";
             let accs = ["BpHuL7HNTJDDGiw4ELpnYQdhTNNgZ53ennhtkQjGawGS", "9RFqA8EbTTqH3ct1fTGiGgqFAg2hziUdtyGgg1w69LJP", "F2f14Nw7kqBeGwgFymm7sEPcZrKWWN56hvN5yx2vc6sE"];
             console.log(parse(join_key, data, accs));
         });
